--- a/compose.yaml
+++ b/compose.yaml
@@ -1,9 +1,3 @@
-version: '3'
-
-networks:
-  general_network:
-    name: general_network
-
 services:
   backend:
-    build: backend
+    build: /backend/
