--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB="host=localhost user=offline_project_user password=123456 dbname=offline_project port=3001 sslmode=disable"
+DB="host=localhost user=admin password=admin dbname=offline_project_db port=5432 sslmode=disable"
