--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,3 +1,10 @@
 FROM postgres:15.4
 
 COPY . .
+
+EXPOSE 5432
+
+ENV POSTGRES_NAME=offline_project_db
+ENV POSTGRES_USER=admin
+ENV POSTGRES_PASSWORD=admin
+ENV POSTGRES_PORT=5432
