--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: 123
         POSTGRES_DB: offline_project_db
+        POSTGRES_PORT: 5432
       ports:
         - '3000:3000'
       networks:
