--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,8 +21,10 @@ services:
       environment:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: 123
-        POSTGRES_DB: offline_project_db
+        POSTGRES_DB_NAME: offline_project_db
         POSTGRES_PORT: 5432
+        DOCKER_NETWORK_NAME: localnet
+        DOCKER_DB_CONTAINER_NAME: offline_project_db
       ports:
         - '3000:3000'
       networks:
