--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,6 +18,10 @@ services:
   offline_project_backend:
       container_name: offline_project_backend
       image: golang:1.21
+
+      command: bash -c "
+        code --install-extension golang.go"
+
       environment:
         POSTGRES_USER: postgres
         POSTGRES_PASSWORD: 123
