--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     container_name: offline_project_db
     image: postgres:15.4
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
+      POSTGRES_DB:  ${ARG1}
+      POSTGRES_USER: ${ARG2}
+      POSTGRES_PASSWORD: ${ARG3}
     networks:
         - localnet
     volumes:
