--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,15 +5,60 @@ services:
     container_name: offline_project_db
     image: postgres:15.4
     environment:
-      POSTGRES_DB:  ${ARG1}
-      POSTGRES_USER: ${ARG2}
-      POSTGRES_PASSWORD: ${ARG3}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 123
+      POSTGRES_DB: offline_project_db
+    ports:
+      - '5432:5432'
     networks:
         - localnet
     volumes:
       - ./db:/home/offline_project_db
 
+  offline_project_backend:
+      container_name: offline_project_backend
+      image: golang:1.21
+      environment:
+        POSTGRES_USER: postgres
+        POSTGRES_PASSWORD: 123
+        POSTGRES_DB_NAME: offline_project_db
+        POSTGRES_PORT: 5432
+        DOCKER_NETWORK_NAME: localnet
+        DOCKER_DB_CONTAINER_NAME: offline_project_db
+      ports:
+        - '3000:3000'
+      networks:
+        - localnet
+      volumes:
+        - ./backend:/home/offline_project_backend
+      depends_on:
+        - offline_project_db
+
   offline_project_db_migrate_up:
+    image: migrate/migrate:4
+    command: ["-path", "/migrations", "-database", "postgres://postgres:123@offline_project_db:5432/offline_project_db?sslmode=disable", "up"]
+    volumes:
+      - ./migrations:/migrations
+    networks:
+      - localnet
+    depends_on:
+      - offline_project_db
+
+  offline_project_db_migrate_down:
+    image: migrate/migrate:4
+    #                                              "postgres://your_username:your_password@your_db_docker_compose_service:5432/your_database?sslmode=disable"
+    command: ["-path", "/migrations", "-database", "postgres://postgres:123@offline_project_db:5432/offline_project_db?sslmode=disable", "down", "-all"]
+    volumes:
+      - ./migrations:/migrations
+    networks:
+      - localnet
+    depends_on:
+      - offline_project_db
+
+  offline_project_db_migrate_tool:
+    # To check current version: docker-compose run offline_project_db_migrate_tool -path /migrations -database "postgres://postgres:123@offline_project_db:5432/offline_project_db?sslmode=disable" version
+    # To check current version: docker-compose run offline_project_db_migrate_tool -path /migrations -database "postgres://postgres:123@offline_project_db:5432/offline_project_db?sslmode=disable" force <desired version>
+    # Then run service: offline_project_db_migrate_up
     image: migrate/migrate:4
     volumes:
       - ./migrations:/migrations
