--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -77,6 +77,16 @@ services:
     depends_on:
       - offline_project_db
 
+  offline_project_db_force_version:
+    image: migrate/migrate:4
+    command: ["-path", "/migrations", "-database", "postgres://postgres:123@offline_project_db:5432/offline_project_db?sslmode=disable", "version"]
+    volumes:
+      - ./migrations:/migrations
+    networks:
+      - localnet
+    depends_on:
+      - offline_project_db
+
 networks:
   localnet:
     name: localnet
