--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -1,8 +1,8 @@
 version: "2"
 sql:
     - engine: "postgresql"
-      queries: "./db/1_query.sql"
-      schema: "./migrations/1_init.sql"
+      queries: "../db/query.sql"
+      schema: "../migrations/1_init.up.sql"
       gen:
         go:
           package: "db"
