--- a/backend/service_gateway/.devcontainer/devcontainer.json
+++ b/backend/service_gateway/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
 		"vscode": {
 			"settings": {},
 			"extensions": [
-				"golang.go"
+				"golang.go",
+				"zxh404.vscode-proto3"
 			]
 		}
 	}
