--- a/backend/service_gateway/.devcontainer/devcontainer.json
+++ b/backend/service_gateway/.devcontainer/devcontainer.json
@@ -13,7 +13,8 @@
 			"settings": {},
 			"extensions": [
 				"golang.go",
-				"zxh404.vscode-proto3"
+				"zxh404.vscode-proto3",
+				"ms-vscode.makefile-tools"
 			]
 		}
 	}
