--- a/backend/service_gateway/Dockerfile
+++ b/backend/service_gateway/Dockerfile
@@ -4,4 +4,23 @@ WORKDIR /offline_project/backend/service_gateway
 
 COPY . .
 
+
+RUN go install -v "golang.org/x/tools/gopls@latest"
+RUN go install -v "github.com/cweill/gotests/gotests@v1.6.0"
+RUN go install -v "github.com/fatih/gomodifytags@v1.16.0"
+RUN go install -v "github.com/josharian/impl@v1.1.0"
+RUN go install -v "github.com/haya14busa/goplay/cmd/goplay@v1.0.0"
+RUN go install -v "github.com/go-delve/delve/cmd/dlv@latest"
+RUN go install -v "honnef.co/go/tools/cmd/staticcheck@latest"
+RUN go install -v "golang.org/x/tools/cmd/goimports@latest"
+
+RUN go get "google.golang.org/grpc"
+
+RUN go install -v "google.golang.org/protobuf/cmd/protoc-gen-go@v1.28"
+RUN go install -v "google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2"
+# RUN go install -v "google.golang.org/protobuf@v1.31.0"
+RUN apt update
+RUN apt install -y protobuf-compiler
+RUN export PATH="$PATH:$(go env GOPATH)/bin"
+
 EXPOSE 8080
