--- a/backend/Makefile
+++ b/backend/Makefile
@@ -2,7 +2,6 @@ NETWORK_NAME	:=	dockers_network
 
 create_network:
 	docker	network	create	${NETWORK_NAME};
-
 remove_network:
 	docker	network	rm	${NETWORK_NAME};
 
@@ -11,7 +10,6 @@ connect_containers:
 	do	\
 		docker	network	connect	${NETWORK_NAME}	$$container_id;	\
 	done;
-
 disconnect_containers:
 	for	container_id	in	$$(docker	ps	-aq);	\
 	do	\
@@ -19,5 +17,9 @@ disconnect_containers:
 	done;
 
 set_down_network:	disconnect_containers	remove_network
-
 set_up_network:	create_network	connect_containers
+
+list_connected_containers:
+	docker	network	inspect	\
+	-f	'{{	range	$$key,	$$value	:=	.Containers	}}{{	printf	"%s\n"	$$key}}{{	end	}}'	\
+	${NETWORK_NAME}
