--- a/backend/service_gateway/protobuf/Makefile
+++ b/backend/service_gateway/protobuf/Makefile
@@ -1,4 +1,4 @@
 ROOT_DIR:=$(realpath $(shell dirname $(firstword $(MAKEFILE_LIST))))
 
-gen_example:
-	protoc	-I=$(ROOT_DIR)	--go_out=$(ROOT_DIR)/example/gen/	$(ROOT_DIR)/example/example.proto
+gen_helloworld:
+	protoc	-I=$(ROOT_DIR)	--go_out=$(ROOT_DIR)/helloworld/gen/	--go_opt=paths=source_relative	--go-grpc_out=$(ROOT_DIR)/helloworld/gen/	--go-grpc_opt=paths=source_relative	$(ROOT_DIR)/helloworld/helloworld.proto
