--- a/backend/service_gateway/Dockerfile
+++ b/backend/service_gateway/Dockerfile
@@ -13,9 +13,10 @@ RUN go install -v "github.com/go-delve/delve/cmd/dlv@latest"
 RUN go install -v "honnef.co/go/tools/cmd/staticcheck@latest"
 RUN go install -v "golang.org/x/tools/cmd/goimports@latest"
 
+RUN go get "google.golang.org/grpc/credentials/insecure"
 RUN go get "google.golang.org/grpc"
 RUN go install -v "google.golang.org/protobuf/cmd/protoc-gen-go@v1.28"
-RUN go install -v "google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2"
+#RUN go install -v "google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2"
 RUN apt update
 RUN apt install -y protobuf-compiler
 RUN export PATH="$PATH:$(go env GOPATH)/bin"
