--- a/backend/service_gateway/Dockerfile
+++ b/backend/service_gateway/Dockerfile
@@ -13,10 +13,12 @@ RUN go install -v "github.com/go-delve/delve/cmd/dlv@latest"
 RUN go install -v "honnef.co/go/tools/cmd/staticcheck@latest"
 RUN go install -v "golang.org/x/tools/cmd/goimports@latest"
 
-RUN go get "google.golang.org/grpc/credentials/insecure"
-RUN go get "google.golang.org/grpc"
+# RUN go get "google.golang.org/grpc/credentials/insecure"
+RUN go get "go get google.golang.org/grpc@v1.60.0"
+#RUN go get "google.golang.org/grpc/status"
 RUN go install -v "google.golang.org/protobuf/cmd/protoc-gen-go@v1.28"
 #RUN go install -v "google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2"
+#RUN go get "google.golang.org/grpc/codes"
 RUN apt update
 RUN apt install -y protobuf-compiler
 RUN export PATH="$PATH:$(go env GOPATH)/bin"
