--- a/backend/Makefile
+++ b/backend/Makefile
@@ -25,4 +25,4 @@ list_connected_containers:
 	${NETWORK_NAME}
 
 list_containers_ip:
-	docker ps -q | xargs -n 1 docker inspect --format '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}} {{ .Name }}' | sed 's/ \// /'
+	docker ps -q | xargs -n 1 docker inspect --format '{{ .Name }} {{range .NetworkSettings.Networks}} {{.IPAddress}}{{end}}' | sed 's#^/##';
