--- a/backend/Makefile
+++ b/backend/Makefile
@@ -23,6 +23,11 @@ list_connected_containers:
 	docker	network	inspect	\
 	-f	'{{	range	$$key,	$$value	:=	.Containers	}}{{	printf	"%s\n"	$$key}}{{	end	}}'	\
 	${NETWORK_NAME}
-
 list_containers_ip:
 	docker ps -q | xargs -n 1 docker inspect --format '{{ .Name }} {{range .NetworkSettings.Networks}} {{.IPAddress}}{{end}}' | sed 's#^/##';
+
+network_info:
+	docker network inspect dockers_network
+
+list_networks:
+	docker network ls
