--- a/backend/service_db_handler/.devcontainer/devcontainer.json
+++ b/backend/service_db_handler/.devcontainer/devcontainer.json
@@ -18,5 +18,9 @@
 			]
 		}
 	},
-	"postStartCommand": "bash scripts/prepare_for_work.sh"
+	"postStartCommand": "bash scripts/prepare_for_work.sh",
+	"runArgs": [
+		"--name",
+		"service_db_handler"
+	]
 }
