--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,42 +1,15 @@
-services:
-  keycloak_demo:
-    image: keycloak/keycloak
-    command: start-dev
-    environment:
-      KC_DB: postgres
-      KC_DB_URL_HOST: postgres_keycloak_demo
-      KC_DB_URL_DATABASE: keycloak
-      KC_DB_PASSWORD: password
-      KC_DB_USERNAME: keycloak
-      KC_DB_SCHEMA: public
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    ports:
-      - "8890:8080"
-    depends_on:
-      postgres_keycloak_demo:
-        condition: service_healthy
-    networks:
-      - keycloak_demo_dev_network
-  
-  postgres_keycloak_demo:
-    image: postgres:14.10-bullseye
-    command: postgres -c 'max_connections=200'
-    volumes:
-      - pgdata_keycloak_demo:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: password
-    healthcheck:
-      test: "exit 0"
-    ports:
-      - "5436:5432"
-    networks:
-      - keycloak_demo_dev_network
-volumes:
-  pgdata_keycloak_demo:
+version: '2.4'
 
-networks:
-  keycloak_demo_dev_network:
-    driver: bridge
+services:
+  # nginx:
+  #   image: nginx
+  #   volumes:
+  #     - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+  #     - ./proxy/logs:/var/log/nginx
+  #   ports:
+  #     - 80:80
+
+  go-http-server:
+    build: go_module/
+    ports:
+      - "8080:8080"
