certs for localhost

--- a/backend/proxy/conf/nginx.conf
+++ b/backend/proxy/conf/nginx.conf
@@ -3,7 +3,11 @@ events{}
 http {
     access_log  /var/log/nginx/access.log;
     error_log  /var/log/nginx/access.log;
-
+    
     server {
+        listen 80;
+        listen [::]:80;
+
+        return 200 "hello from 80";
     }
 }
