--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,15 +1,13 @@
-version: '2.4'
+version: '3'
 
 services:
-  # nginx:
-  #   image: nginx
-  #   volumes:
-  #     - ./proxy/nginx.conf:/etc/nginx/nginx.conf
-  #     - ./proxy/logs:/var/log/nginx
-  #   ports:
-  #     - 80:80
-
-  go-http-server:
-    build: go_module/
+  proxy:
+    image: 
+      nginx:1.23.3-alpine
+    restart: 
+      always
     ports:
-      - "8080:8080"
+      - 80:80
+      - 443:443
+    volumes:
+      - ./proxy/conf/:/etc/nginx/conf.d/:ro
