--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,13 +1,66 @@
 version: '3'
 
+networks:
+  keycloak_nginx_dev_network:
+    driver: bridge
+
+volumes:
+  pgdata_keycloak_nginx_demo:
+
 services:
-  proxy:
+  keycloak_demo:
+    container_name: 
+      keycloak_demo
     image: 
-      nginx:1.23.3-alpine
-    restart: 
-      always
-    ports:
-      - 80:80
-      - 443:443
+      keycloak/keycloak
+    command: 
+      start-dev
+    environment:
+      KC_DB: postgres
+      KC_DB_URL_HOST: postgres_keycloak_demo
+      KC_DB_URL_DATABASE: keycloak
+      KC_DB_USERNAME: keycloak
+      KC_DB_PASSWORD: password
+      KC_DB_SCHEMA: public
+
+      KC_PROXY: edge
+      KC_HOSTNAME_ADMIN_URL: https://localhost:8443
+      KC_HOSTNAME_URL: https://localhost:8443
+
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    depends_on:
+      postgres_keycloak_demo:
+        condition: service_healthy
+    networks:
+      - keycloak_nginx_dev_network
+
+  postgres_keycloak_demo:
+    image: 
+      postgres:14.2
+    command: 
+      postgres -c 'max_connections=200'
     volumes:
-      - ./proxy/conf/:/etc/nginx/conf.d/:ro
+      - pgdata_keycloak_nginx_demo:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+    healthcheck:
+      test: 
+        "exit 0"
+    ports:
+      - "5436:5432"
+    networks:
+      - keycloak_nginx_dev_network
+
+  keycloak_nginx:
+    build:
+      ./nginx
+    ports:
+      - "8080:80"
+      - "8443:443"
+    depends_on:
+      - keycloak_demo
+    networks:
+      - keycloak_nginx_dev_network
