--- a/backend/nginx/config/localhost.conf
+++ b/backend/nginx/config/localhost.conf
@@ -1,4 +1,5 @@
-events {}
+events {
+}
 
 http {
     upstream keycloakServer {
@@ -8,12 +9,12 @@ http {
     server {
         listen 80 default_server;
         server_name localhost;
-        return 301 https://localhost:8443$request_uri
+        return 301 https://localhost:8443$request_uri;
     }
 
     server {
         listen 443 ssl;
-        server_name localhost;    
+        server_name localhost;
         ssl_certificate /etc/nginx/ssl/localhost/localhost.crt;
         ssl_certificate_key /etc/nginx/ssl/localhost/localhost.key;
 
