--- a/backend/nginx/config/localhost.conf
+++ b/backend/nginx/config/localhost.conf
@@ -1,6 +1,4 @@
-events {
-}
-
+events {}
 http {
     upstream keycloakServer {
         server keycloak_demo:8080;
@@ -21,9 +19,9 @@ http {
         location / {
             proxy_pass http://keycloakServer;
             proxy_set_header Host $host;
-            proxy_set_header X-Real_IP $remote_addr;
-            proxy_set_header X-Forvarded-For $proxy_add_x_forvarded_for;
-            proxy_set_header X-Forvarded-Proto $scheme;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
