--- a/backend/nginx/config/localhost.conf
+++ b/backend/nginx/config/localhost.conf
@@ -1,7 +1,7 @@
 events {}
 http {
     upstream keycloakServer {
-        server keycloak_demo:8080;
+        server keycloak_demo:808¬0;
     }
 
     server {
