--- a/backend/proxy/config/localhost.conf
+++ b/backend/proxy/config/localhost.conf
@@ -1,7 +1,7 @@
 events {}
 http {
     upstream keycloakServer {
-        server keycloak_demo:8080;
+        server keycloak:8080;
     }
 
     server {
