--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
     driver: bridge
 
 volumes:
-  offline_project_data:
+  keycloak_data:
 
 services:
   proxy:
@@ -14,7 +14,8 @@ services:
     image:
       nginx:1.23.3-alpine
     volumes:
-      - ./proxy/certs/*:/etc/nginx/ssl/localhost/
+      - ./proxy/certs/localhost/localhost.crt:/etc/nginx/ssl/localhost/localhost.crt
+      - ./proxy/certs/localhost/localhost.key:/etc/nginx/ssl/localhost/localhost.key
       - ./proxy/config/localhost.conf:/etc/nginx/nginx.conf
     ports:
       - "8080:80"
@@ -33,7 +34,7 @@ services:
       start-dev
     environment:
       KC_DB: postgres
-      KC_DB_URL_HOST: postgres_keycloak_demo
+      KC_DB_URL_HOST: keycloak_postgres
       KC_DB_URL_DATABASE: keycloak
       KC_DB_USERNAME: keycloak
       KC_DB_PASSWORD: password
@@ -59,7 +60,7 @@ services:
     command: 
       postgres -c 'max_connections=200'
     volumes:
-      - offline_project_data:/var/lib/postgresql/data
+      - keycloak_data:/var/lib/postgresql/data
     environment:
       POSTGRES_DB: keycloak
       POSTGRES_USER: keycloak
