--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,71 +4,19 @@ networks:
   localnet:
     driver: bridge
 
-volumes:
-  keycloak_data:
-
 services:
-  proxy:
-    container_name: 
-      proxy
-    image:
-      nginx:1.23.3-alpine
-    volumes:
-      - ./proxy/certs/localhost/localhost.crt:/etc/nginx/ssl/localhost/localhost.crt
-      - ./proxy/certs/localhost/localhost.key:/etc/nginx/ssl/localhost/localhost.key
-      - ./proxy/config/localhost.conf:/etc/nginx/nginx.conf
-    ports:
-      - "8080:80"
-      - "8443:443"
-    depends_on:
-      - keycloak
-    networks:
-      - localnet
+  oauth2-proxy:
+    container_name: oauth2-proxy
+    image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+
+  nginx:
+    container_name: nginx
+    image: nginx:1.23.3-alpine
 
   keycloak:
-    container_name: 
-      keycloak
-    image: 
-      keycloak/keycloak
-    command: 
-      start-dev
-    environment:
-      KC_DB: postgres
-      KC_DB_URL_HOST: keycloak_postgres
-      KC_DB_URL_DATABASE: keycloak
-      KC_DB_USERNAME: keycloak
-      KC_DB_PASSWORD: password
-      KC_DB_SCHEMA: public
+    container_name: keycloak
+    image: keycloak/keycloak
+    command: start-dev
+    env_file:
+      - keycloak/.env
 
-      KC_PROXY: edge
-      KC_HOSTNAME_ADMIN_URL: https://localhost:8443
-      KC_HOSTNAME_URL: https://localhost:8443
-
-      KEYCLOAK_ADMIN: admin
-      KEYCLOAK_ADMIN_PASSWORD: admin
-    depends_on:
-      keycloak_postgres:
-        condition: service_healthy
-    networks:
-      - localnet
-
-  keycloak_postgres:
-    container_name: 
-      keycloak_postgres
-    image: 
-      postgres:14.2
-    command: 
-      postgres -c 'max_connections=200'
-    volumes:
-      - keycloak_data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: keycloak
-      POSTGRES_USER: keycloak
-      POSTGRES_PASSWORD: password
-    healthcheck:
-      test: 
-        "exit 0"
-    ports:
-      - "5436:5432"
-    networks:
-      - localnet
