--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,18 +5,29 @@ networks:
     driver: bridge
 
 services:
-  oauth2-proxy:
-    container_name: oauth2-proxy
-    image: quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+  # oauth2-proxy:
+  #   container_name:
+  #     oauth2-proxy
+  #   image:
+  #     quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
 
   nginx:
-    container_name: nginx
-    image: nginx:1.23.3-alpine
+    container_name:
+      nginx
+    image:
+      nginx:1.23.3-alpine
+    volumes:
+      - "./nginx/localhost.conf:/etc/nginx/conf.d/default.conf"
+    ports:
+      - 80:80
 
-  keycloak:
-    container_name: keycloak
-    image: keycloak/keycloak
-    command: start-dev
-    env_file:
-      - keycloak/.env
+  # keycloak:
+  #   container_name:
+  #     keycloak
+  #   image:
+  #     keycloak/keycloak
+  #   command:
+  #     start-dev
+  #   env_file:
+  #     keycloak/.env
 
