--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,14 @@ services:
   #     oauth2-proxy
   #   image:
   #     quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+  #   volumes:
+  #     - ./oauth2_proxy/oauth2_proxy.cfg:/oauth2-proxy.cfg
+  #   command:
+  #     --config /oauth2-proxy.cfg
+  #   networks:
+  #     - localnet
+  #   hostname:
+  #     oauth2-proxy
 
   nginx:
     container_name:
@@ -17,17 +25,19 @@ services:
     image:
       nginx:1.23.3-alpine
     volumes:
-      - "./nginx/localhost.conf:/etc/nginx/conf.d/default.conf"
+      - ./nginx/localhost.conf:/etc/nginx/nginx.conf
+    networks:
+      - localnet
     ports:
       - 80:80
 
-  # keycloak:
-  #   container_name:
-  #     keycloak
-  #   image:
-  #     keycloak/keycloak
-  #   command:
-  #     start-dev
-  #   env_file:
-  #     keycloak/.env
+  keycloak:
+    container_name:
+      keycloak
+    image:
+      keycloak/keycloak
+    command:
+      start-dev
+    env_file:
+      keycloak/.env
 
