--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -40,4 +40,27 @@ services:
       start-dev
     env_file:
       keycloak/.env
+    networks:
+      - localnet
+    ports:
+      - 8080:8080
+
+  keycloak_postgres:
+    image: 
+      postgres:14.10-bullseye
+    command: postgres -c 'max_connections=200'
+    volumes:
+      - pgdata_keycloak_demo:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: keycloak
+      POSTGRES_USER: keycloak
+      POSTGRES_PASSWORD: password
+    healthcheck:
+      test: "exit 0"
+    ports:
+      - "5436:5432"
+    networks:
+      - localnet
+volumes:
+  keycloak_postgres:
 
