--- a/backend/nginx/localhost.conf
+++ b/backend/nginx/localhost.conf
@@ -5,6 +5,20 @@ events {
 http {
     server {
         listen 80;
-        return 200 'kek';
+
+        location / {
+            auth_request /auth;
+            return 200 'kek';
+        }
+
+        location /auth/ {
+            internal;
+
+            proxy_set_header Host       $host;
+            proxy_set_header X-Real-IP  $remote_addr;
+            proxy_set_header X-Forwarded-Uri $request_uri;
+
+            proxy_pass http://oauth2-proxy:4180/;
+        }
     }
 }
