--- a/backend/nginx/localhost.conf
+++ b/backend/nginx/localhost.conf
@@ -18,7 +18,7 @@ http {
             proxy_set_header X-Real-IP  $remote_addr;
             proxy_set_header X-Forwarded-Uri $request_uri;
 
-            proxy_pass http://oauth2-proxy:4180/;
+            proxy_pass http://oauth2-proxy.kek.me:4180/;
         }
     }
 }
