--- a/backend/oauth2_proxy/oauth2_proxy.cfg
+++ b/backend/oauth2_proxy/oauth2_proxy.cfg
@@ -1,14 +1,16 @@
 http_address="0.0.0.0:4180"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
-provider="oidc"
 email_domains="example.com"
-oidc_issuer_url="http://dex.localtest.me:4190/dex"
-client_secret="b2F1dGgyLXByb3h5LWNsaWVudC1zZWNyZXQK"
-client_id="oauth2-proxy"
 cookie_secure="false"
+upstreams="http://httpbin.localtest.me:8080"
+cookie_domains=[".kek.me"] 
+whitelist_domains=[".kek.me"]
 
-redirect_url="http://oauth2-proxy.oauth2-proxy.localhost/oauth2/callback"
-cookie_domains=".oauth2-proxy.localhost" # Required so cookie can be read on all subdomains.
-whitelist_domains=".oauth2-proxy.localhost" # Required to allow redirection back to original requested target.
-# Enables the use of `X-Forwarded-*` headers to determine request correctly
-reverse_proxy="true"
+client_secret="Y9JwvCKkXNBNDi5KoxtLJuVykOjDclR1"
+client_id="offline_project_client"
+redirect_url="http://oauth2-proxy.kek.me:4180/oauth2/callback"
+
+
+oidc_issuer_url="http://keycloak.kek.me:9080/auth/realms/offline_project"
+provider="oidc"
+provider_display_name="Keycloak"
