--- a/backend/nginx/localhost.conf
+++ b/backend/nginx/localhost.conf
@@ -7,18 +7,21 @@ http {
         listen 80;
 
         location / {
-            auth_request /auth;
+            auth_request /oauth2/auth;
             return 200 'kek';
         }
 
-        location /auth/ {
+        location /oauth2/auth {
             internal;
 
+            proxy_pass http://oauth2-proxy.kek.me:4180/;
+            
             proxy_set_header Host       $host;
             proxy_set_header X-Real-IP  $remote_addr;
             proxy_set_header X-Forwarded-Uri $request_uri;
-
-            proxy_pass http://oauth2-proxy.kek.me:4180/;
+            # nginx auth_request includes headers but not body
+            proxy_set_header Content-Length   "";
+            proxy_pass_request_body           off;
         }
     }
 }
