--- a/backend/oauth2_proxy/oauth2_proxy.cfg
+++ b/backend/oauth2_proxy/oauth2_proxy.cfg
@@ -2,7 +2,7 @@ http_address="0.0.0.0:4180"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
 email_domains="example.com"
 cookie_secure="false"
-upstreams="http://httpbin.localtest.me:8080"
+upstreams="http://httpbin.kek.me:8080"
 cookie_domains=[".kek.me"] 
 whitelist_domains=[".kek.me"]
 
