--- a/backend/nginx/localhost.conf
+++ b/backend/nginx/localhost.conf
@@ -14,7 +14,7 @@ http {
         location /oauth2/auth {
             internal;
 
-            proxy_pass http://oauth2-proxy.kek.me:4180/;
+            proxy_pass http://localhost:4180/;
             
             proxy_set_header Host       $host;
             proxy_set_header X-Real-IP  $remote_addr;
