--- a/backend/oauth2_proxy/oauth2_proxy.cfg
+++ b/backend/oauth2_proxy/oauth2_proxy.cfg
@@ -2,15 +2,15 @@ http_address="0.0.0.0:4180"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
 email_domains="example.com"
 cookie_secure="false"
-upstreams="http://httpbin.kek.me:8080"
+upstreams="http://localhost:8080"
 cookie_domains=[".kek.me"] 
 whitelist_domains=[".kek.me"]
 
 client_secret="Y9JwvCKkXNBNDi5KoxtLJuVykOjDclR1"
 client_id="offline_project_client"
-redirect_url="http://oauth2-proxy.kek.me:4180/oauth2/callback"
+redirect_url="http://localhost:4180/oauth2/callback"
 
 
-oidc_issuer_url="http://keycloak.kek.me:9080/auth/realms/offline_project"
+oidc_issuer_url="http://localhost:9080/auth/realms/offline_project"
 provider="oidc"
 provider_display_name="Keycloak"
