--- a/backend/oauth2_proxy/oauth2_proxy.cfg
+++ b/backend/oauth2_proxy/oauth2_proxy.cfg
@@ -1,4 +1,4 @@
-http_address="0.0.0.0:4180"
+http_address="localhost:4180"
 cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
 email_domains="example.com"
 cookie_secure="false"
@@ -11,6 +11,6 @@ client_id="offline_project_client"
 redirect_url="http://localhost:4180/oauth2/callback"
 
 
-oidc_issuer_url="http://localhost:9080/auth/realms/offline_project"
+oidc_issuer_url="http://localhost:8890/auth/realms/offline_project"
 provider="oidc"
 provider_display_name="Keycloak"
