--- a/backend/keycloak/.env
+++ b/backend/keycloak/.env
@@ -6,3 +6,5 @@ KC_DB_USERNAME="keycloak"
 KC_DB_SCHEMA="public"
 KEYCLOAK_ADMIN="admin"
 KEYCLOAK_ADMIN_PASSWORD="admin"
+KC_HEALTH_ENABLED="true"
+KC_METRICS_ENABLED="true"
