--- a/backend/oauth2_proxy/oauth2_proxy.cfg
+++ b/backend/oauth2_proxy/oauth2_proxy.cfg
@@ -1,16 +1,16 @@
 http_address="localhost:4180"
-cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
-email_domains="example.com"
-cookie_secure="false"
-upstreams="http://localhost:8080"
-cookie_domains=[".kek.me"] 
-whitelist_domains=[".kek.me"]
+# cookie_secret="OQINaROshtE9TcZkNAm-5Zs2Pv3xaWytBmc5W7sPX7w="
+# email_domains="example.com"
+# cookie_secure="false"
+upstreams="http://localhost:80"
+# cookie_domains=[".kek.me"] 
+# whitelist_domains=[".kek.me"]
 
-client_secret="Y9JwvCKkXNBNDi5KoxtLJuVykOjDclR1"
+client_secret="HJWr6GHePKWFyBsIIRGa24o93s4cwIrL"
 client_id="offline_project_client"
-redirect_url="http://localhost:4180/oauth2/callback"
+redirect_url="http://localhost:80"
 
 
-oidc_issuer_url="http://localhost:8890/auth/realms/offline_project"
-provider="oidc"
-provider_display_name="Keycloak"
+# oidc_issuer_url="http://localhost:8890/auth/realms/offline_project"
+# provider="oidc"
+# provider_display_name="Keycloak"
