--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -8,24 +8,24 @@ volumes:
   keycloak_postgres_volume:
 
 services:
-  oauth2-proxy:
-    container_name:
-      oauth2-proxy
-    image:
-      quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
-    volumes:
-      - ./oauth2_proxy/oauth2_proxy.cfg:/oauth2-proxy.cfg
-    command:
-      --config /oauth2-proxy.cfg
-    networks:
-      - localnet
-    ports:
-      - "4180:4180"
-    # hostname:
-    #   oauth2-proxy.kek.me
-    # depends_on:
-    #   keycloak:
-    #     condition: service_healthy
+  # oauth2-proxy:
+  #   container_name:
+  #     oauth2-proxy
+  #   image:
+  #     quay.io/oauth2-proxy/oauth2-proxy:v7.5.1
+  #   volumes:
+  #     - ./oauth2_proxy/oauth2_proxy.cfg:/oauth2-proxy.cfg
+  #   command:
+  #     --config /oauth2-proxy.cfg
+  #   networks:
+  #     - localnet
+  #   ports:
+  #     - "4180:4180"
+  #   # hostname:
+  #   #   oauth2-proxy.kek.me
+  #   # depends_on:
+  #   #   keycloak:
+  #   #     condition: service_healthy
 
   nginx:
     container_name:
@@ -34,50 +34,53 @@ services:
       nginx:1.23.3-alpine
     volumes:
       - ./nginx/localhost.conf:/etc/nginx/nginx.conf
+      - ./nginx/certs/localhost/localhost.crt:/etc/nginx/ssl/localhost/localhost.crt
+      - ./nginx/certs/localhost/localhost.key:/etc/nginx/ssl/localhost/localhost.key
     hostname: 
       kek
     networks:
       - localnet
     ports:
       - "80:80"
+      - "443:443"
 
-  keycloak:
-    container_name:
-      keycloak
-    image:
-      keycloak/keycloak
-    command:
-      start-dev     
-# --import-realm
-    env_file:
-      keycloak/.env
-    volumes:
-      - ./keycloak/realm:/opt/keycloak/data/import
-    networks:
-      - localnet
-    ports:
-      - "8081:8080"
-    depends_on:
-      keycloak_postgres:
-        condition: service_healthy
+#   keycloak:
+#     container_name:
+#       keycloak
+#     image:
+#       keycloak/keycloak
+#     command:
+#       start-dev     
+# # --import-realm
+#     env_file:
+#       keycloak/.env
+#     volumes:
+#       - ./keycloak/realm:/opt/keycloak/data/import
+#     networks:
+#       - localnet
+#     ports:
+#       - "8081:8080"
+#     depends_on:
+#       keycloak_postgres:
+#         condition: service_healthy
 
-  keycloak_postgres:
-    container_name:
-      keycloak_postgres
-    image: 
-      postgres:14.10-bullseye
-    command: 
-      postgres -c 'max_connections=200'
-    volumes:
-      - keycloak_postgres_volume:/var/lib/postgresql/data
-    env_file:
-      keycloak_postgres/.env
-    networks:
-      - localnet
-    ports:
-      - "5432:5432"
-    healthcheck:
-      test: "exit 0"
+#   keycloak_postgres:
+#     container_name:
+#       keycloak_postgres
+#     image: 
+#       postgres:14.10-bullseye
+#     command: 
+#       postgres -c 'max_connections=200'
+#     volumes:
+#       - keycloak_postgres_volume:/var/lib/postgresql/data
+#     env_file:
+#       keycloak_postgres/.env
+#     networks:
+#       - localnet
+#     ports:
+#       - "5432:5432"
+#     healthcheck:
+#       test: "exit 0"
 
   # httpbin:
   #   container_name: httpbin
