--- a/backend/nginx/localhost.conf
+++ b/backend/nginx/localhost.conf
@@ -5,23 +5,21 @@ events {
 http {
     server {
         listen 80;
+        listen [::]:80;
 
-        location / {
-            auth_request /oauth2/auth;
-            return 200 'kek';
-        }
+        server_name _;
 
-        location /oauth2/auth {
-            internal;
+        return 301 https://$host$request_uri;
+    }
 
-            proxy_pass http://localhost:4180/;
-            
-            proxy_set_header Host       $host;
-            proxy_set_header X-Real-IP  $remote_addr;
-            proxy_set_header X-Forwarded-Uri $request_uri;
-            # nginx auth_request includes headers but not body
-            proxy_set_header Content-Length   "";
-            proxy_pass_request_body           off;
-        }
+    server {
+        listen              443 ssl;
+        listen              [::]:443 ssl;
+
+        ssl_certificate     /etc/nginx/ssl/localhost/localhost.crt;
+        ssl_certificate_key /etc/nginx/ssl/localhost/localhost.key;
+        ssl_protocols       TLSv1.2 TLSv1.1 TLSv1;
+
+        return 200 'kek';
     }
 }
